--- a/controller/src/main/resources/application.properties
+++ b/controller/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.liquibase.change-log=classpath:db/liquibase/changelog.xml
 #spring.jpa.show-sql: true
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.web.resources.static-locations=classpath:/resources/,classpath:/static/
+logging.level.org.springframework.web=DEBUG
+server.port=8081
