--- a/service/pom.xml
+++ b/service/pom.xml
@@ -65,6 +65,11 @@
                             <artifactId>hibernate-validator</artifactId>
                             <version>6.1.6.Final</version>
                         </path>
+                        <path>
+                            <groupId>org.hibernate</groupId>
+                            <artifactId>hibernate-jpamodelgen</artifactId>
+                            <version>5.4.0.Final</version>
+                        </path>
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
