--- a/controller/src/main/resources/application.properties
+++ b/controller/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.liquibase.change-log=classpath:db/liquibase/changelog.xml
-#spring.jpa.show-sql: true
+spring.jpa.show-sql=true
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.web.resources.static-locations=classpath:/resources/,classpath:/static/
 logging.level.org.springframework.web=DEBUG
