--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -43,5 +43,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.5.1</version>
+        </dependency>
     </dependencies>
 </project>
