--- a/controller/src/main/resources/application.properties
+++ b/controller/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.liquibase.change-log=classpath:db/liquibase/changelog.xml
 spring.jpa.show-sql=true
-spring.mvc.hiddenmethod.filter.enabled=true
-spring.web.resources.static-locations=classpath:/resources/,classpath:/static/
+spring.mvc.hiddenmethod.filter.enabled = true
+spring.web.resources.static-locations=classpath:/resources/,classpath:/static/,file:///${web.upload-path}
 logging.level.org.springframework.web=DEBUG
-server.port=8081
+server.port=8076
+web.upload-path=F:/project/commodity_papa_Spring_boot/commodity_papa/images
