--- a/controller/src/main/resources/application.properties
+++ b/controller/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/commodity_papa
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://${MYSQL_HOST:localhost}:3306/commodity_papa}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:1234}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.liquibase.change-log=classpath:db/liquibase/changelog.xml
 spring.jpa.show-sql=true
@@ -9,4 +9,4 @@ spring.mvc.hiddenmethod.filter.enabled = true
 spring.web.resources.static-locations=classpath:/resources/,classpath:/static/,file:///${web.upload-path}
 logging.level.org.springframework.web=DEBUG
 server.port=8076
-web.upload-path=F:/project/commodity_papa_Spring_boot/commodity_papa/images
+web.upload-path=//project/commodity_papa_Spring_boot/commodity_papa/images
