--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -8,9 +8,10 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>by.nenartovcich</groupId>
     <artifactId>controller</artifactId>
-
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
