--- a/controller/src/main/resources/application.properties
+++ b/controller/src/main/resources/application.properties
@@ -8,5 +8,6 @@ spring.jpa.show-sql=true
 spring.mvc.hiddenmethod.filter.enabled = true
 spring.web.resources.static-locations=classpath:/resources/,classpath:/static/,file:///${web.upload-path}
 logging.level.org.springframework.web=DEBUG
-server.port=${PORT:8080}
+server.port=${PORT:8081}
 web.upload-path=//project/commodity_papa_Spring_boot/commodity_papa/images
+spring.thymeleaf.prefix=classpath:/templates/
