--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -11,7 +11,7 @@
     <groupId>by.nenartovcich</groupId>
     <artifactId>controller</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
